--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html xml:lang="es">
   <head>
-    <title>Sumador</title>
+    <title>Sumador y Multiplicador</title>
   </head>
   <body>
-    <h1>Sumador</h1>
+    <h1>Sumador y Multiplicador</h1>
     <form id="sumar-form">
       <label for="primer-numero">Primer número:</label>
       <input type="number" id="primer-numero" />
       <label for="segundo-numero">Segundo número:</label>
       <input type="number" id="segundo-numero" />
+   
       <input type="submit" value="Sumar" id="sumar-button" />
+      <input type="button" value="Multiplicar" id="multiplicar-button" />
     </form>
     <div id="resultado-div"></div>
 
